<resources>
    <string name="app_name">CIPRB</string>
    <string name="internet_check_bn">ইন্টারনেট সংযোগ চালু করুন</string>
    <string name="loading_message">ডাটা সংরক্ষিত হচ্ছে..</string>
    <string name="waiting">অপেক্ষা করুন</string>
    <string name="success">ডাটা সংরক্ষিত হয়েছে</string>
    <string name="update">আপডেট করুন</string>
    <string name="sync">সংরক্ষিত তথ্য আপলোড করুন</string>
    <string name="no_data">সংরক্ষনের জন্য কোন ডাটা নেই</string>
    <string name="skipped">এই ব্যক্তির ডাটা নেয়া হয়নি</string>
    <string name="sync_doing">সংরক্ষিত তথ্য আপলোড হচ্ছে.... </string>
    <string name="suggestion">প্রতিটি প্রশ্নের উত্তর নিন</string>
    <string name="no_live_member">কোন জীবিত সদস্য নেই</string>
    <string name="no_died_member">কোন মৃত সদস্য নেই</string>
    <string name="finish_current_house_hold_alive">বর্তমান বাড়ির জীবিত সদস্যদের ডাটা সংগ্রহ শেষ করুন</string>
    <string name="finish_current_house_hold_died">বর্তমান বাড়ির মৃত সদস্যদের ডাটা সংগ্রহ শেষ করুন</string>
    <string name="finish_current_house_hold_house_characteristics">বর্তমান বাড়ির ডাটা সংগ্রহ শেষ করুন</string>
    <string name="name">নাম</string>
    <string name="relation_hh">খানা প্রধানের সাথে সম্পর্ক</string>
    <string name="date_of_birth">জন্ম তারিখ (দিন/মাস/বছর)</string>
    <string name="current_age">বর্তমানে বয়স</string>
    <string name="death_age">মৃত্যূর  সময় বয়স</string>
    <string name="sex">লিঙ্গ</string>
    <string name="maritial_satus">বৈবাহিক অবস্থা</string>
    <string name="is_responder">আপনি কি উত্তর দাতা?</string>
    <string name="occupasion"> প্রধান পেশা</string>
    <string name="education">লেখাপড়া (সর্বোচ্চ শ্রেণী পাশ)</string>
    <string name="injury_last_six_month"> গত ৬ মাসে কখনো ইনজুরি হয়েছিল? (ইনজুরি নোটিফিকেশান ফর্মে -১ এ তথ্য লিপিবদ্ধ করুন)</string>
    <string name="injury_time_last_six"> যদি হ্যাঁ হয়, তাহলে কতবার ইনজুরি হয়েছিল?</string>
    <string name="smoking">ধূমপান করেন কি না ?</string>
    <string name="bettle_nut_chewing">পান খান কি না?</string>
    <string name="swimming">সাঁতার কাটতে জানেন কি না?</string>
    <string name="district_town">জেলা</string>
    <string name="upozila">উপজেলা</string>
    <string name="household_no">খানার নম্বর</string>
    <string name="village">গ্রাম</string>
    <string name="house_head"> খানা প্রধান</string>
    <string name="last_24_death_histry">গত ২৪ মাসে খানায় মৃতের সংখ্যা (কেউ মারা না গিয়ে থাকলে 00 লিখুন):</string>
    <string name="members_number">খানায় সদস্য সংখ্যা</string>
    <string name="hh_details_hd">Household and Socio-Economic Information</string>
    <string name="death_conf_hd"> Death Confirmation</string>
    <string name="death_date">মৃত্যুর তারিখ</string>
    <string name="death_location">মৃত্যূর স্থান</string>
    <string name="death_symptoms">শেষ অসুস্থতার সময়ের লক্ষণ ও উপসর্গ (আঘাত /ইনজুরি ব্যতীত মৃত্যূর ক্ষেত্রে)
    (প্রতিটি প্রশ্ন জিজ্ঞাসা করুন)</string>
    <string name="death_chronic_deseases">মৃত ব্যক্তির উল্লেখিত অসুস্থতাগুলোর কোনটি ছিল কিনা জিজ্ঞাসা করুন
    (প্রতিটি প্রশ্ন জিজ্ঞাসা করুন)</string>
    <string name="weakness_time">মৃত্যূর পূর্বে কতদিন অসুস্থ ছিল?</string>
    <string name="death_cause"> কি কারনে মৃত্যূ হয়েছিল?</string>
    <string-array name="survey_loc">
        <item>1. City Coorporation</item>
        <item>2. District Town</item>
        <item>3. Rural (Upazila)</item>
    </string-array>
    <string-array name="survey_city_corp">
        <item>01. Dhaka</item>
        <item>02. Chittagong</item>
        <item>03. Rajshahi</item>
        <item>04. Khulna</item>
        <item>05. Barisal</item>
        <item>06. Sylhet</item>
        <item>07. Rangpur</item>
        <item>08. Mymensing</item>
    </string-array>
    <string-array name="survey_district_town">
        <item>02. Rajbari</item>
        <item>03. Sherpur</item>
        <item>04. Bagerhat</item>
        <item>05. Jessore</item>
        <item>07. Joypurhat</item>
        <item>08. Pabna</item>
        <item>11. Bhola</item>
        <item>12. Chandpur</item>
        <item>13. Khagrachari</item>
        <item>14. Kurigram</item>
        <item>15. Thakurgaon</item>
        <item>16. Sirajgonj</item>
        <item>17. Manikgonj</item>
        <item>18. Jhenaidah</item>
        <item>19. Habignj</item>
        <item>20. Barguna</item>
    </string-array>
    <string-array name="survey_district_rural">

        <item>01. Dhaka</item>
        <item>02. Rajbari</item>
        <item>03. Sherpur</item>
        <item>04. Bagerhat</item>
        <item>05. Jessore</item>
        <item>06. Khulna</item>
        <item>07. Joypurhat</item>
        <item>08. Pabna</item>
        <item>09. Sylhet </item>
        <item>10. Barisal</item>
        <item>11. Bhola</item>
        <item>12. Chandpur</item>
        <item>13. Khagrachari</item>
        <item>14. Kurigram</item>
        <item>15. Thakurgaon</item>
        <item>16. Sirajgonj</item>


    </string-array>
    <string-array name="survey_upozila">
        <item>01. Dhamrai</item>
        <item>02. Baliakandi</item>
        <item>03. Nalitabari</item>
        <item>04. Fakirhat</item>
        <item>05. Chowgacha</item>
        <item>06. Koira</item>
        <item>07. Kalai</item>
        <item>08. Santhia</item>
        <item>09. Golapganj </item>
        <item>10. Banaripara </item>
        <item>11. Borhanuddin</item>
        <item>12. Kachua</item>
        <item>13. Khagrachari Sadar</item>
        <item>14. Kurigram Sadar</item>
        <item>15. Ranishankail</item>
        <item>16. belkuchi</item>


    </string-array>
    <string-array name="survey_relation_to_hh">

        <item>  নির্বাচন করুন</item>
        <item>01. নিজ (খানা প্রধান)</item>
        <item>02. বাবা</item>
        <item>03. মা</item>
        <item>04. ভাই/বোন</item>
        <item>05. চাচা/মামা/খালু/ফুপা</item>
        <item>06. চাচী/মামী/খালা/ফুপ</item>
        <item>07. শ্বশুর/শ্বাশুরী </item>
        <item>08. ছেলে</item>
        <item>09. মেয়ে </item>
        <item>10. স্বামী/স্ত্রী</item>
        <item>11. জামাতা/পুত্রবধূ</item>
        <item>12. দাদা/দাদী/নানা/নানী</item>
        <item>13. নাতি/নাতনী</item>
        <item>14. শ্যালক/দেবর/ভাসুর/ভায়রা/ভগ্নীপতি/ শ্যালিকা/ননদ</item>
        <item>15. গৃহকর্মী</item>
        <item>16. ভাতৃ/ভগ্নী-পুত্র/কন্যা</item>
        <item>16.  অন্যান্য</item>

    </string-array>
    <string-array name="survey_sex">
        <item>  নির্বাচন করুন</item>
        <item>01. পুরুষ</item>
        <item>02. মহিলা</item>
        <item>03. অন্যান্য</item>
    </string-array>
    <string-array name="survey_marital_status">

        <item>  নির্বাচন করুন</item>
        <item>01. বিবাহিত</item>
        <item>02. অবিবাহিত </item>
        <item>03. তালাকপ্রাপ্তা </item>
        <item>04. বিধবা</item>
        <item>05. বিচ্ছিন্ন/ আলাদা</item>

    </string-array>
    <string-array name="survey_yes_no">

        <item>  নির্বাচন করুন</item>
        <item>01. হ্যাঁ</item>
        <item>02. না</item>

    </string-array>
    <string-array name="survey_select_please">

        <item>  নির্বাচন করুন</item>
        <item>01. হ্যাঁ</item>
        <item>02. না</item>

    </string-array>
    <string-array name="survey_occupation">
        <item>  নির্বাচন করুন</item>
        <item>01. কৃষিকাজ</item>
        <item>02. ব্যবসা</item>
        <item>03. ছাত্র</item>
        <item>04. গৃহিণী</item>
        <item>05. চাকুরী</item>
        <item>06. বেকার</item>
        <item>07. দক্ষ শ্রমিক </item>
        <item>08. অদক্ষ শ্রমিক </item>
        <item>09. গৃহকমী</item>
        <item>10. অবসরপ্রাপ্ত ্</item>
        <item>11. ভ্যান/রিকশা চালক </item>
        <item>12. সিএনজি/বাস/ট্রাক চালক</item>
        <item>13. শিক্ষক</item>
        <item>97. অন্যান্য</item>
        <item>15. ৬ বছরের কমবয়সী </item>
        <item>16. প্রযোজ্য নয় </item>

    </string-array>
    <string-array name="survey_death_loc">

        <item>  নির্বাচন করুন</item>
        <item>01. নিজ বাড়ি</item>
        <item>02. হাসপাতাল</item>
        <item>03. কর্মক্ষেত্র</item>
        <item>04. যাত্রাপথে</item>
        <item>05. অন্যান্য (নির্দিষ্ট করুন)</item>


    </string-array>
    <string-array name="survey_death_symptoms">

        <item>  নির্বাচন করুন</item>
        <item>01. নিজ বাড়ি</item>
        <item>02. হাসপাতাল</item>
        <item>03. কর্মক্ষেত্র</item>
        <item>04. যাত্রাপথে</item>
        <item>05. অন্যান্য (নির্দিষ্ট করুন)</item>


    </string-array>
    <string name="fever">জ্বর?</string>
    <string name="rash">র‌্যাশ/ফুসকুড়ি?</string>
    <string name="growth"> দৈহিক বৃদ্ধি কি স্বাভাবিক ছিল?</string>
    <string name="jaundice">বিবর্নভাব(অ্যানিমিয়া)/ জন্ডিস?</string>
    <string name="cough">কাশি?</string>
    <string name="respiratory">শ্বাসজনিত কোনো সমস্যা? </string>
    <string name="diarrhoea">পাতলা পায়খানা/ডায়রিয়া?</string>
    <string name="vomiting">বমি?</string>
    <string name="abdominal_pain">পেটে ব্যাথা?</string>
    <string name="abdominal_distension">পেট ফাঁপা?</string>
    <string name="weight_loss">ওজন হ্রাস?</string>
    <string name="chest_pain">বুকে ব্যাথা?</string>
    <string name="mass">পিন্ড?</string>
    <string name="headache">মাথা ব্যাথা?</string>
    <string name="stiff_neck">ঘাড় শক্ত?</string>
    <string name="convulsion">খিঁচুনী?</string>
    <string name="fits_unconsciousness">মূর্ছা/অজ্ঞান?</string>
    <string name="paralysis">পক্ষাঘাত?</string>
    <string name="urine_colour">প্র¯্রাবের রং কি স্বাভাবিক ছিল?</string>
    <string name="surgery_operation">সার্জারী/অস্ত্রপোচার?</string>
    <string name="Others_specify">অন্যান্য (নির্দিষ্ট করুন)</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="dont_know">জানিনা</string>
    <string name="sick_before_death">মৃত ব্যক্তির উল্লেখিতঅসুস্থতাগুলোর কোনটি ছিল কিনা জিজ্ঞাসা করুন(প্রতিটি প্রশ্ন জিজ্ঞাসা করুন)</string>
    <string name="sickness_time"> মৃত্যূর পূর্বে কতদিন অসুস্থ ছিল ? দিন days</string>
    <string name="cause_of_death">কি কারনে মৃত্যূ হয়েছিল?</string>
    <string name="deaseases_hypertension">উচ্চ রক্তচাপ</string>
    <string name="deaseases_heart">হৃদরোগ</string>
    <string name="deaseases_diabatic">বহুমুত্র</string>
    <string name="deaseases_cancer">ক্যানসার</string>
    <string-array name="survey_cause_of_death">
        <item>  নির্বাচন করুন</item>
        <item>1. ইনিজুরী জনিত মৃত্যু</item>
        <item>2. অসুস্থ্যতা জনিত মৃত্যু </item>
    </string-array>
    <string name="person_id">Person Id:</string>
    <string name="transport_injury">পরিবহন দুর্ঘটনা </string>
    <string name="transport_travel">দুর্ঘটনার সময় ব্যক্তিটি কিভাবে ভ্রমন করছিল?</string>
    <string name="transport_street_doing_what">ব্যক্তিটি রাস্তায় কি করছিল?</string>
    <string name="transport_collide_partile">কিসের সাথে আহত ব্যক্তির বা তার বাহনের সংঘর্ষ হয়?</string>
    <string name="transport_why_victim_on_road">ব্যক্তিটি রাস্তায় কেন গিয়েছিল?</string>
    <string name="transport_any_safety_device">ব্যক্তিটি নিরাপত্তার জন্য কোন কিছু ব্যবহার করেছিল?</string>
    <string name="transport_if_yes_safety_device">যদি হ্যাঁ হয়, তাহলে কিব্যবহার করেছিল?</string>
    <string name="transport_condition_of_road">রাস্তার অবস্থা কেমন ছিল?</string>
    <string name="transport_alcohol_mood_altering_substance">ব্যক্তিটি কি মাদকদ্রব্য সেবন করেছিল?</string>
    <string name="talking_over_mobile">চালক কি মোবাইল ফোনে কথা বলছিল?</string>
    <string name="Quality1">চলাচল</string>
    <string name="Quality2">নিজের যত্ন</string>
    <string name="Quality3">দৈনন্দিন কর্মকাণ্ড ( কাজ, পড়াশুনা, ঘরের কাজ, বিস্রাম)</string>
    <string name="Quality4">ব্যাথা বা অসস্থি</string>
    <string name="Quality5">বিচলিত বা  চিন্তিত</string>
    <string name="Quality6"> আপনার আজকের স্বাস্থ্য অবস্থা ( আপনি আপনার আজকের
   দিনের স্বাস্থ্য কে ১০০ নম্বর এর মধে কত নম্বর দিবেন)
</string>
</resources>