<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoadTransportInjuryActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/transport_injury"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_header">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView

                android:id="@+id/textView_person_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/person_id"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_travel"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_survey_transport_travel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_travel"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_street_doing_what"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_street_doing_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_street_doing_what"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_collide_partile"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_collide_partile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_collide_partile"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_why_victim_on_road"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_why_victim_on_road"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_why_victim_on_road"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_any_safety_device"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_any_safety_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_yes_no_dk"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_if_yes_safety_device"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_if_yes_safety_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_if_yes_safety_device"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_condition_of_road"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_condition_of_road"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_transport_condition_of_road"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/transport_alcohol_mood_altering_substance"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_transport_alcohol_mood_altering_substance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_yes_no_dk"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/talking_over_mobile"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_talking_over_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/survey_yes_no_dk"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Cancel">

                </Button>

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Next">

                </Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
