<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alhikmah.ciprb.QualityOfLifeActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/heading_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="Quality of life assessment"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView_person_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/person_id"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/Quality1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/q_1"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/Quality2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality2"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/q_2"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/Quality3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/spinner_q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/q_3"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/Quality4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality4"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/spinner_q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/q_4"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/Quality5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality5"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/spinner_q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/q_5"
                    android:focusable="false"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Quality6"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/q6"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:maxLength="3" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Cancel">

                </Button>

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Next">

                </Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
